--- a/assets/style.css
+++ b/assets/style.css
@@ -2,14 +2,14 @@
     font-family: 'Alfa Slab One', cursive;
     vertical-align: auto;
     border: 2px dodgerblue;
-    text-shadow: 2px 2px 15px dodgerblue;
+    text-shadow: 2px 2px 10px dodgerblue;
     -webkit-text-stroke-width: .25px;
     -webkit-text-stroke-color: dodgerblue;
-
+    transition: text-shadow 1s;
     
 }
 .naming-sect:hover{
-    text-shadow: 2px 2px 10px dodgerblue;
+    text-shadow: 2px 2px 35px dodgerblue;
     
 
 }
