this should about do it

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@
 
 .navbar{
     font-family: 'Archivo Black', sans-serif;
-    text-shadow: 2px 2px 5px white;
+    /* text-shadow: 2px 2px 5px white; */
     
     
 }
